优化API接口，兼容文档 和 页面翻译功能
